# taskshell

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Changelog  INSTALL  LICENSE  NEWS  README.md  cmake.h.in
doc/: CMakeLists.txt
doc/man/: .gitignore  tasksh.1.in
src/: CMakeLists.txt  Color.cpp  Color.h  Directory.cpp  FS.cpp  File.cpp  context.cpp  diag.cpp  eng-USA.h  help.cpp  i18n.h  main.cpp  prompt.cpp  review.cpp  shell.cpp  text.cpp  text.h  utf8.cpp  util.cpp  util.h  wcwidth6.cpp
src/l10n/: eng-USA.h
test/: .gitignore  CMakeLists.txt  color.t.cpp  directory.t.cpp  file.t.cpp  path.t.cpp  template.t  test.h  version.t
test/basetest/: __init__.py  tasksh.py  utils.py
